Fix player page on iOS

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -25,6 +25,7 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    cursor: pointer;
 }
 
 .player-arrow-left {
